[package]
name = "trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.0"
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3"
proptest = "1.0.0"
test-strategy = "0.1.2"

[[bench]]
name = "benchmarks"
harness = false