[package]
name = "trie"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.0"
thiserror = "1.0.30"

[dev-dependencies]
criterion = {git = "https://github.com/crepererum/criterion.rs.git", rev = "def185d02186622dafaea547804f717228e35547", features = ["html_reports"]}
proptest = "1.0.0"
test-strategy = "0.1.2"

# [[bench]]
# name = "benchmarks"
# harness = false